# yhacks_s26

./: .gitignore  README.md
backend/: add_element.py  agent.py  batch_process.py  create_vector_index.py  input_embedding_sample_test.py  input_to_embedding.py  mongo_test_connect.py  query_elements.py  remove_elements.py  update_element.py
front_end/: package.json  requirements.txt  server.py
front_end/desktop/: package-lock.json  package.json  yhacks_s26.code-workspace
front_end/desktop/public/: index.html  main.js  styles.css
front_end/desktop/scripts/: dev.sh
front_end/desktop/src-tauri/: Cargo.toml  tauri.conf.json
front_end/desktop/src-tauri/capabilities/: default.json
front_end/desktop/src-tauri/icons/: icon.icns
front_end/desktop/src-tauri/src/: backend.rs  lib.rs  main.rs
other_files/: fake_agent.py
