[package]
name = "coppergolem_desktop"
version = "0.1.0"
description = "CopperGolem — Tauri desktop shell for the Python assistant"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
